--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     compile 'org.springframework:spring-web:3.2.4.RELEASE'
     compile 'log4j:log4j:1.2.17'
     compile 'org.apache.commons:commons-lang3:3.1'
+    compile 'com.wordnik:swagger-jaxrs_2.10:1.3.0'
+    compile 'com.wordnik:swagger-core_2.10:1.3.0'
+    compile 'javax.servlet:servlet-api:2.5'
 }
 
 task wrapper(type: Wrapper) {
